--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <scalaBinaryVersion>2.11</scalaBinaryVersion>
     <scalatest.version>3.0.1</scalatest.version>
     <log4j.version>2.11.2</log4j.version>
-    <jackson.version>2.9.8</jackson.version>
+    <jackson.version>2.9.9</jackson.version>
   </properties>
 
   <repositories>
@@ -29,6 +29,18 @@
   </pluginRepositories>
 
   <dependencies>
+    <dependency>
+      <groupId>com.pharbers</groupId>
+      <artifactId>pharbers-kafka</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.scalaj/scalaj-http -->
+    <dependency>
+      <groupId>org.scalaj</groupId>
+      <artifactId>scalaj-http_2.11</artifactId>
+      <version>2.4.2</version>
+    </dependency>
+
     <!--json-->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
