--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,8 @@
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix><!--声明主类使用类库的相对目录名称-->
               <mainClass>com.pharbers.kafka.monitor.main</mainClass>
+              <!--默认true SNAPSHOT会变成时间戳-->
+              <useUniqueVersions>false</useUniqueVersions>
             </manifest>
           </archive>
         </configuration>
