--- a/pharbers_config/config.json
+++ b/pharbers_config/config.json
@@ -1,9 +1,10 @@
 {
   "producerTopic": "MonitorResponse",
   "consumerTopic": "MonitorRequest",
+  "statusTopic": "docker-connect-status",
   "ksqlUrl": "http://59.110.31.50:8088",
   "guardManager": {
-    "class": "BaseGuardManager",
+    "class": "com.pharbers.kafka.monitor.manager.ConnectorGuardManager",
     "maxThread": "10"
   },
   "ksqlHttpClient": {
