--- a/pharbers_config/config.json
+++ b/pharbers_config/config.json
@@ -1,10 +1,10 @@
 {
-  "producerTopic": "MonitorResponse",
-  "consumerTopic": "MonitorRequest",
+  "producerTopic": "MonitorResponse2",
+  "consumerTopic": "MonitorRequest2",
   "statusTopic": "docker-connect-status",
   "ksqlUrl": "http://59.110.31.50:8088",
   "guardManager": {
-    "class": "com.pharbers.kafka.monitor.manager.ConnectorGuardManager",
+    "class": "com.pharbers.kafka.monitor.manager.BaseGuardManager",
     "maxThread": "10"
   },
   "ksqlHttpClient": {
