更新了通信协议
将kafka msg的avro字段更新了并放在本地，maven引入avro编译为java class插件，更改kafkaMagAction，statusMsgAction,connectorguard， statusGuard符合新的msg模型

--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,24 @@
           <!--可配置多个提取复制路径只需要 “<id>”名字不一样即可-->
         </executions>
       </plugin>
+<!--avro-->
+      <plugin>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro-maven-plugin</artifactId>
+        <version>1.8.1</version>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>schema</goal>
+            </goals>
+            <configuration>
+              <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
+              <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 
       <!--dockerfile-->
       <!--<plugin>-->
